--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "test": "bun test/test.ts",
     "build": "bun build ./src/index.ts --outdir ./dist",
     "generate": "bun run ./src/index.ts",
-    "prepublishOnly": "bun build ./src/index.ts --outdir ./dist",
-    "publish": "bun publish"
+    "prepare": "husky install",
+    "prepublishOnly": "bun run build",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "pocketbase",
@@ -29,7 +30,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@types/bun": "latest",
+    "husky": "^9.1.7",
+    "semantic-release": "^23.0.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
