--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "test": "bun test/test.ts",
     "build": "bun build ./src/index.ts --outdir ./dist",
     "generate": "bun run ./src/index.ts",
-    "prepare": "husky install",
+    "prepare": "bunx husky install",
     "prepublishOnly": "bun run build",
-    "semantic-release": "semantic-release"
+    "publish": "bun run build && npm publish"
   },
   "keywords": [
     "pocketbase",
@@ -30,11 +30,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
     "@types/bun": "latest",
-    "husky": "^9.1.7",
-    "semantic-release": "^23.0.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
