--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@thisux/pocketbase-typegen",
-  "version": "1.0.5",
+  "version": "1.0.3",
   "description": "TypeScript type generator for PocketBase collections (CLI) & library. Still in development.",
   "module": "index.ts",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "pocketbase-typegen": "./src/cli.ts"
+    "pocketbase-typegen": "src/cli.ts"
   },
   "publishConfig": {
     "access": "public"
