--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "pocketbase-typegen": "src/cli.ts"
+    "pocketbase-typegen": "./dist/cli.js"
   },
   "publishConfig": {
     "access": "public"
